--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,245 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+body {
+  font-family: 'Roboto', sans-serif;
+  border: 1px clear;
+  box-sizing: border-box;
+  background: #fff0b3;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* justify-content: space-between; */
+  min-height: 50vh;
+  /*   margin: 0 auto; */
+  flex-direction: row;
+  font-size: 16px;
+}
+
+
+
+header,
+footer {
+  width: 100%;
+  /*   height: 60px; */
+  background: #646464;
+  color: red;
+  line-height: 0px;
+  justify-content: flex-end;
+  /* display: inline-block; */
+  /* flex: 0 20px; */
+  font-size: 18px;
+}
+
+
+main {
+  /* flex-grow: 1; */
+  background: #F4F4F4;
+  padding: 10px 10px 5px 10px;
+  /* display: flex; */
+  /* justify-content: center; */
+}
+
+section {
+  /* flex-basis: 150px; */
+  flex: 0 100px;
+  background: #e6e6e6;
+  color: black;
+  margin: 2px 2px 2px 2px;
+  text-align: center;
+  /* line-height: 10vh; */
+  flex-direction: row;
+  flex-grow: 1;
+}
+
+p {
+  display: inline;
+  color: black;
+  font-size: 16px;
+  padding: 5px;
+}
+
+li {
+  display: inline;
+  font-size: 14px;
+  color: black;
+  text-align: center;
+  padding: 5px;
+  /* textDecoration: none; */
+}
+
+.intro {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.6) 0%, rgba(235, 237, 238, 0.6) 100%), url('./images/papers_sized.png');
+  padding: 5px 25px 5px 35px;
+}
+
+.title {
+  text-align: center;
+  font-size: 30px;
+  /* background-color: linear-gradient(120deg, rgba(232, 236, 241, 0.6) 0%, rgba(232, 236, 241, 0.6) 100%); */
+  padding: 10px 10px 5px 10px;
+  line-height: 1.5;
+}
+
+.invitation {
+  text-align: center;
+  font-size: 22px;
+  /* padding: 5px 25px 5px 35px; */
+}
+
+.invitation span {
+  background-color: rgba(232, 236, 241, 0.7);
+  /* background-color: linear-gradient(120deg, rgba(232, 236, 241,0.2) 0%, rgba(232, 236, 241,0.2) 50%); */
+}
+
+input[type=text] {
+  border: 1px solid black;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+#button {
+  font-size: 18px;
   color: white;
+  background-color: black;
+  padding: 2px 2px 2px 2px;
+  /* background-color: rgba(253, 251, 251, 0.5); */
 }
 
-.App-link {
-  color: #61dafb;
+.news-list {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.7) 0%, rgba(235, 237, 238, 0.7) 100%), url('./images/US_texture.png');
+  /* background-size:cover; */
+  background-repeat: repeat;
+  filter: blur(50%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.news-list-pre {
+  /* background-image: url('./images/US_texture.png'); */
+  /* background-size:cover; */
+  /* background-repeat:repeat; */
+  filter: blur(50%);
+}
+
+
+.us-news-list {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.7) 0%, rgba(235, 237, 238, 0.7) 100%), url('./images/US_texture.png');
+  /* background-size:cover; */
+  background-repeat: repeat;
+  filter: blur(50%);
+}
+
+.us-news-list-pre {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.2) 0%, rgba(235, 237, 238, 0.2) 100%), url('./images/US_texture.png');
+  /* background-size:cover; */
+  background-repeat: repeat;
+}
+
+.us-news-list img {
+  display: inline-block;
+  width: 12px;
+  height: 10px;
+}
+
+.gb-news-list {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.8) 0%, rgba(235, 237, 238, 0.8) 100%), url('./images/gb_flag.gif');
+  background-repeat: repeat;
+  filter: blur(50%);
+}
+
+.gb-news-list-pre {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.2) 0%, rgba(235, 237, 238, 0.2) 100%), url('./images/gb_flag.gif');
+  background-repeat: repeat;
+  filter: blur(50%);
+}
+
+
+.gb-news-list img {
+  display: inline-block;
+  width: 12px;
+  height: 10px;
+}
+
+.world-news-list {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.8) 0%, rgba(235, 237, 238, 0.8) 100%), url('./images/WorldFlags.png');
+  background-repeat: repeat;
+}
+
+.world-news-list-pre {
+  background-image: linear-gradient(120deg, rgba(253, 251, 251, 0.2) 0%, rgba(235, 237, 238, 0.2) 100%), url('./images/WorldFlags.png');
+  background-repeat: repeat;
+}
+
+
+.world-news-list img {
+  display: inline-block;
+  width: 14px;
+  height: 12px;
+}
+
+.new-pre {
+  background: rgba(166, 166, 166, 0.3);
+  color: white;
+  padding: 5px 0px 2px 0px;
+  margin-top: 5px;
+}
+
+.news-item {
+  background: rgba(166, 166, 166, 0.3);
+  color: black;
+  padding: 5px 0px 2px 0px;
+  margin-top: 5px;
+}
+
+.news-item p {
+  color: black;
+}
+
+.red {
+  background: none;
+}
+
+div {
+  background: rgba(255, 255, 255, .25);
+  margin: 5px;
+}
+
+
+form {
+  /* background: #ffe6e6; */
+  justify-content: center;
+  padding: 10px 10px 10px 10px;
+  text-align: center;
+  margin: 10px 10px 10px 10px;
+}
+
+div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #777;
+}
+
+
+@media screen and (max-width: 700px) {
+  .container {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  section {
+    /* max-height: 600px; */
+    /* order: 1; */
   }
 }
